--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment-timezone": "^0.5.31",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.9",
     "source-map-support": "^0.5.19"
